--- a/Views/Event/Index.cshtml
+++ b/Views/Event/Index.cshtml
@@ -10,67 +10,32 @@
 <script src="@Url.Content("~/Scripts/jquery-3.4.1.min.js")"></script>
 <script src="@Url.Content("~/Scripts/gridmvc.min.js")"></script>
 
+<style type="text/css"> 
+    .tableCell{
+       display: table-cell !important;
+    } 
+</style>
+
 <div class="jumbotron">
 
-    <button type="button" class="btn btn-primary">btn-primary</button>
-    <button type="button" class="btn btn-success">btn-primary</button>
-    <button type="button" class="btn btn-info">btn-primary</button>
-    <button type="button" class="btn btn-danger">btn-primary</button>
-
-    <br />
+    <h2>Events</h2>
     <br />
 
-    @{
-        @*var evento = ViewData["firstEvent"] as Event;
-
-            @Html.Label("ViewModel from ViewData Session Object:")
-            <br />
-            @Html.Label("Id:")
-            @Html.LabelForModel(evento.Id.ToString())
-            <br />
-            @Html.Label("Nombre:")
-            @Html.LabelForModel(evento.Name)
-            <br />
-            @Html.Label("Capacidad:")
-            @Html.LabelForModel(evento.Capacity.ToString())
-            <br />
-            @Html.Label("Fecha del evento:")
-            @Html.LabelForModel(evento.EventDateTime.ToString())*@
-
-        @*<br /> <br />
-            @Html.Label("ViewModel from returned View from Controller:")
-            <br />
-            @Html.Label("Id:")
-            @Html.Label(@Model.Id.ToString())
-            <br />
-            @Html.Label("Nombre:")
-            @Html.LabelForModel(@Model.Name)
-            <br />
-            @Html.Label("Código de lenguaje:")
-            @Html.LabelForModel(@Model.Language.Code)
-            <br />
-            @Html.Label("Nombre compañia:")
-            @Html.LabelForModel(@Model.Company.Name)*@
-    }
-
-    @using (Ajax.BeginForm("AddNew", new AjaxOptions
+    @using (Ajax.BeginForm("Create", new AjaxOptions
     {
         HttpMethod = "Post",
         OnSuccess = "Loaded"
     }))
     {
-        <button type="submit" value="Create" class="btn btn-info">Add new event</button>
+        <button type="submit" value="Create" class="btn btn-success">Add new event</button>
     }
 
-    @*<script type="text/javascript">
-            function Loaded(result) {
-                alert('result ' + result.Name);
-            }
-        </script>*@
+    <br />
+    <input type="button" class="btn btn-danger" value="Disable" onclick="location.href='@Url.Action("Disable", "Event")'" />
+    <br /> <br />
 
     @{
         //var eventos = ViewData["allEvents"] as List<Event>;
-
         @Html.Grid(ViewData.Model).Columns(columns =>
         {
            columns.Add().Titled("<input id='allChk' type='checkbox' /> ")
@@ -81,20 +46,25 @@
            columns.Add(c => c.Name).Titled("Name");
            columns.Add(c => c.Description).Titled("Description");
            columns.Add(c => c.Capacity).Titled("Capacity");
-           columns.Add(c => c.EventDateTime).Titled("EventDateTime");
+           columns.Add(c => c.EventDateTime).Titled("Event DateTime");
+           columns.Add(c => c.Sessions).Titled("Nº Sessions");
+           columns.Add(c => c.Active).Titled("Active").RenderValueAs(c => c.Active == true ? "Yes" : "No");
            //columns.Add(c => c.Company.Name).Titled("Company Name");
            //columns.Add(c => c.Language.Name).Titled("Language Name");
-           columns.Add().Titled(" ").Css("btn glyphicon glyphicon-pencil").Filterable(false).Sortable(false)
-           .Encoded(false)
-           .Sanitized(false)
-           .SetWidth(30)
-           .RenderValueAs(c => Html.ActionLink("Edit", "Edit", new { id = c.Id }));
 
-           columns.Add().Css("glyphicon glyphicon-trash").Filterable(false)
+            columns.Add().Titled(null).Css("btn glyphicon glyphicon-pencil tableCell").Filterable(false).Sortable(false)
            .Encoded(false)
            .Sanitized(false)
            .SetWidth(30)
-           .RenderValueAs(c => Html.ActionLink("Delete", null, null, new { @onclick = "return DeleteEventById(" + c.Id + ",'" + c.Name + "');" }));
+           .RenderValueAs(c => Html.ActionLink("Edit", "Edit", new { id = c.Id }))
+           .HeaderRenderer = null;
+
+           columns.Add().Titled(null).Css("glyphicon glyphicon-trash tableCell").Filterable(false)
+           .Encoded(false)
+           .Sanitized(false)
+           .SetWidth(30)
+           .RenderValueAs(c => Html.ActionLink("Delete", null, null, new { @onclick = "return DeleteEventById(" + c.Id + ",'" + c.Name + "');" }))
+           .HeaderRenderer = null;
        }).WithPaging(10).Sortable(true).Filterable(true);
     }
 
@@ -110,7 +80,7 @@
 
     $(document).ready(function () {
 
-        var checkAllBox = $("#allChk"); 
+        var checkAllBox = $("#allChk");
 
         checkAllBox.click(function () {
             var status = checkAllBox.prop('checked');
@@ -133,5 +103,5 @@
             return false;
         }
     }
-
-</script> 
+  
+</script>
