--- a/Views/Event/Edit.cshtml
+++ b/Views/Event/Edit.cshtml
@@ -103,16 +103,54 @@
         <div class="form-row">
             <br />
             <div class="col">
-                <button type="button" class="btn btn-success">Guardar</button>
+                <button type="button" class="btn btn-success" id="SaveBtn">Guardar</button>
             </div>
             <br />
             <div class="col">
-                <button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("Delete", "Event", new { id = @Model.Id })'">Eliminar</button>
+                <button type="button" class="btn btn-danger" id="DeleteBtn">Eliminar</button>
             </div>
             <br />
             <div class="col">
-                <input type="button" class="btn btn-primary" value="Cancelar" onclick="location.href='@Url.Action("Index", "Event")'" />
+                <input type="button" class="btn btn-primary" id="CancelBtn" value="Cancelar" />
             </div>
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+
+    $(document).ready(function () {  
+
+        $("#SaveBtn").click(function () { 
+            return SaveChanges();
+        });
+
+        $("#DeleteBtn").click(function () { 
+            return ConfirmDelete();
+        }); 
+
+        $("#CancelBtn").click(function () { 
+            return ConfirmCancel();
+        }); 
+
+    });
+    function SaveChanges() {
+        alert("Not Implemented method!");
+    }
+    
+    function ConfirmDelete() {
+
+        if (confirm("¿Seguro que deseas eliminar este evento?") == true) {
+            location.href = '@Url.Action("Delete", "Event", new { id = @Model.Id })';
+        }
+        else return false;
+    }  
+
+    function ConfirmCancel() {
+
+        if (confirm("¿Seguro que deseas cancelar y salir?") == true) {
+            location.href = '@Url.Action("Index", "Event")';
+        }
+        else return false;
+    }  
+</script>
