--- a/Views/Event/Index.cshtml
+++ b/Views/Event/Index.cshtml
@@ -14,6 +14,7 @@
        display: table-cell !important;
     } 
 </style>
+
 <div class="jumbotron">
     <h2>Events</h2>
     <br />
@@ -27,8 +28,17 @@
     }
     <br />
     <input type="button" class="btn btn-danger" value="Disable" onclick="location.href='@Url.Action("Disable", "Event")'" />
-    <br /> <br />
-        @{
+    <br /><br />
+
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+        Launch demo modal
+    </button>
+    <br /><br />
+
+
+    @{
         //var eventos = ViewData["allEvents"] as List<Event>;
 
         @Html.Grid(ViewData.Model).Columns(columns =>
@@ -62,6 +72,28 @@
            .HeaderRenderer = null;
        }).WithPaging(10).Sortable(true).Filterable(true);
     }
+
+
+    <!-- Modal panel -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle"><b>Delete Event</b></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ¿Seguro que deseas eliminar el evento []?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary">Continue deleting</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
 
