--- a/Views/Event/Edit.cshtml
+++ b/Views/Event/Edit.cshtml
@@ -16,6 +16,7 @@
 @*<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>*@
 
 <style type="text/css">
+
     .form-control option {
         display: block;
         padding: 3px 20px;
@@ -28,35 +29,34 @@
         cursor: pointer;
         background-color: white;
     }
-
     .form-control:hover {
         color: #333;
         background-color: #e6e6e6;
         border-color: #adadad;
         cursor: pointer;
     }
-
     .form-control option::-moz-selection {
         background: yellow;
     }
-
     .form-control option::selection {
         background: yellow;
     }
-
     .form-control option:focus, option:hover {
         color: #262626 !important;
         text-decoration: none !important;
         background-color: red !important;
         cursor: pointer;
     }
-
-
     .form-group .form-row {
         margin-bottom: 10px;
     }
-</style>
-
+     
+    .btn-secondary:hover {
+        color: white;
+        border: lightblue 1px solid;
+        background-color: gainsboro;
+    }  
+</style> 
 <div class="jumbotron" style="min-height: 400px;">
     <h2>Edit Event</h2>
     <br />
@@ -79,7 +79,7 @@
         </div>
         <div class="form-row">
             <div class="col">
-                <input type="datetime" id="modelEventDate" class="form-control" placeholder="Event Date" value="@Model.EventDateTime.Value" />
+                <input type="datetime" id="modelEventDateTime" class="form-control" placeholder="Event Date" value="@Model.EventDateTime.Value" />
             </div>
             <div class="col">
                 <input type="number" id="modelSessions" class="form-control" placeholder="Nº Sessions" value="@Model.Sessions" />
@@ -87,31 +87,32 @@
         </div>
         <div class="form-row">
             <div class="col">
-                <input type="checkbox" id="modelActive" class="form-control" checked="@(Model.Active.Value)">
+                <label for="modelActive">Active</label>
+                <input style="margin-left:10px;" type="checkbox" id="modelActive" checked="@(Model.Active.Value)" />
             </div>
         </div>
         <div class="form-row">
             <div class="col">
                 @Html.Label("Compañia:")
-                @Html.DropDownListFor(e => e.CompanyId, (List<SelectListItem>)Session["selectCompanies"], "- Please select a company -", new { @class = "form-control" })
+                @Html.DropDownListFor(e => e.CompanyId, (List<SelectListItem>)Session["selectCompanies"], "- Please select a company -", new { @class = "form-control", @id = "modelCompany" })
             </div>
             <div class="col">
                 @Html.Label("Idioma:")
-                @Html.DropDownListFor(e => e.LanguageId, (List<SelectListItem>)Session["selectLanguages"], "- Please select a language -", new { @class = "form-control" })
+                @Html.DropDownListFor(e => e.LanguageId, (List<SelectListItem>)Session["selectLanguages"], "- Please select a language -", new { @class = "form-control", @id = "modelLanguage" })
             </div>
         </div>
         <div class="form-row">
             <br />
             <div class="col">
-                <button type="button" class="btn btn-success" id="SaveBtn">Guardar</button>
+                <button type="button" class="btn btn-success" id="SaveBtn" style="width: 125px;">Save Changes</button>
             </div>
             <br />
             <div class="col">
-                <button type="button" class="btn btn-danger" id="DeleteBtn">Eliminar</button>
+                <button type="button" class="btn btn-danger" id="DeleteBtn" style="width: 125px;">Delete</button>
             </div>
             <br />
             <div class="col">
-                <input type="button" class="btn btn-primary" id="CancelBtn" value="Cancelar" />
+                <input type="button" class="btn btn-secondary" id="CancelBtn" value="Cancel" style="color: darkblue; border: lightblue 1px solid; width: 125px;" />
             </div>
         </div>
     </div>
@@ -131,13 +132,59 @@
 
         $("#CancelBtn").click(function () { 
             return ConfirmCancel();
-        }); 
-
+        });
     });
+
     function SaveChanges() {
-        alert("Not Implemented method!");
+
+        if (IsValid()) { 
+
+                $.ajax({
+                    url: '@Url.Action("Update", "Event")',
+                    data: { entity: BuilEvent() },
+                    type: 'POST',
+                    success: function (data) {
+
+                        if (data) {
+                            ReturnToIndex();
+                        }
+                        else {
+                            ShowErrorMessage();
+                        }
+                    },
+                    error: function () { ShowErrorMessage() }
+                });
+            }
+            else { 
+                alert("Formulario no válido...");
+            }
     }
-    
+
+    function BuilEvent()
+    { 
+        var event = {
+            Id: $("#modelId").val(),
+            Name: $("#modelName").val(),
+            Description: $("#modelDescription").val(),
+            Capacity: $("#modelCapacity").val(),
+            Sessions: $("#modelSessions").val(),
+            EventDateTime: $("#modelEventDateTime").val(),
+            Active: $("#modelActive").prop("checked"),
+            CompanyId: $("#modelCompany").val(),
+            LanguageId: $("#modelLanguage").val() 
+        }; 
+        return event;
+    }
+
+    function IsValid() {
+
+        return true;
+    }
+
+    function ShowErrorMessage() {
+        alert("Ha ocurrido un error y el evento no se ha modificado.");
+    }
+
     function ConfirmDelete() {
 
         if (confirm("¿Seguro que deseas eliminar este evento?") == true) {
@@ -149,8 +196,12 @@
     function ConfirmCancel() {
 
         if (confirm("¿Seguro que deseas cancelar y salir?") == true) {
-            location.href = '@Url.Action("Index", "Event")';
+            ReturnToIndex();
         }
-        else return false;
+    else return false;
     }  
+
+    function ReturnToIndex() {
+        location.href = '@Url.Action("Index", "Event")';
+    } 
 </script>
